lanecwe-Prod/src/objects/Company_Revenue__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Region__c</fullName>
        <formula>Related_Account__r.Owner_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Owner_isActive__c</fullName>
        <formula>Related_Account__r.Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Owner isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsofMonthDate__c</fullName>
        <label>AsofMonthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientUsageId__c</fullName>
        <externalId>true</externalId>
        <label>ClientUsageId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Acct_Related_Acct__c</fullName>
        <formula>IF(
Company_Name__r.Account__r.Id = Related_Account__r.Id, TRUE, FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comp Acct = Related Acct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Account_is_NZL__c</fullName>
        <formula>OR(
Company_Name__r.NZL__c = TRUE,
 Company_Name__r.Account__r.NZL__c = TRUE,
 Related_Account__r.NZL__c = TRUE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company/Account is NZL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Company Revenue</relationshipLabel>
        <relationshipName>Company_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Account_Owner__c</fullName>
        <formula>IF(
 Related_Account__r.NZL__c = True, TRUE, 
IF(
 OwnerId =  Related_Account__r.OwnerId, TRUE, FALSE
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner = Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Generic Product Description</label>
        <picklist>
            <picklistValues>
                <fullName>Web: iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: GlobalMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: 3rd Party Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Company Revenue</relationshipLabel>
        <relationshipName>Company_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFDC_Product_Family__c</fullName>
        <formula>IF( 
OR( 
ISPICKVAL(ProductType__c, &quot;Ancillary Value Added-Automate&quot;),  
ISPICKVAL(ProductType__c, &quot;Soundbyte - Automated&quot;) 
), &quot;Audio : Ancillary&quot;,
IF( 
OR( 
ISPICKVAL(ProductType__c, &quot;Environmental Fees&quot;),
ISPICKVAL(ProductType__c, &quot;Ancillary Other&quot;)
), &quot;Ancillary&quot;,
IF( 
ISPICKVAL(ProductType__c, &quot;RC International&quot;), &quot;Audio : GlobalMeet - PM : International&quot;, 
IF( 
OR( 
ISPICKVAL(ProductType__c, &quot;RC Domestic&quot;),
ISPICKVAL(ProductType__c, &quot;Schedule Ready Conference&quot;)  
), &quot;Audio : GlobalMeet - PM : Domestic&quot;, 
IF( 
OR( 
ISPICKVAL(ProductType__c, &quot;Audio Bundle&quot;), 
ISPICKVAL(ProductType__c, &quot;GlobalMeet Bundles - Prepaid&quot;),  /* added 2/19/2015 aedd */
ISPICKVAL(ProductType__c, &quot;GlobalMeet Bundles&quot;),  /* added 2/19/2015 aedd */
ISPICKVAL(ProductType__c, &quot;Audio Bundle - Prepaid&quot;)
), &quot;Audio : GlobalMeet - Lic : Dom. &amp; Intl.&quot;, 
IF( 
OR( 
ISPICKVAL(ProductType__c, &quot;Ancillary Value Added-OpAssist&quot;), 
ISPICKVAL(ProductType__c, &quot;Auditorium.&quot;), 
ISPICKVAL(ProductType__c, &quot;No Show Fees&quot;), 
ISPICKVAL(ProductType__c, &quot;PremiereCall Connections&quot;), 
ISPICKVAL(ProductType__c, &quot;MarketTouch&quot;),
ISPICKVAL(ProductType__c, &quot;PremiereCall Event&quot;), 
ISPICKVAL(ProductType__c, &quot;Soundbyte - Op Assisted&quot;), 
ISPICKVAL(ProductType__c, &quot;Web Event Services&quot;),
ISPICKVAL(ProductType__c, &quot;Transcription&quot;)
), &quot;Audio : Attended&quot;, 
IF( 
ISPICKVAL(ProductType__c, &quot;ON24 Webcasting&quot;), &quot;Web : ON24 - Lic&quot;, 
IF( 
OR( 
ISPICKVAL(ProductType__c, &quot;Adobe Connect Pro - Minute&quot;), 
ISPICKVAL(ProductType__c, &quot;Managed Services&quot;),
ISPICKVAL(ProductType__c, &quot;Adobe Connect Pro - Seat&quot;)
), &quot;Web : AdobeConnect&quot;, 
IF( 
ISPICKVAL(ProductType__c, &quot;MicroSoftLiveMeeting Ancillary&quot;), &quot;Web : Microsoft Office Live Meeting - Ancillary&quot;, 
IF( 
ISPICKVAL(ProductType__c, &quot;Microsoft Live Meeting - USL&quot;), &quot;Web : Microsoft Office Live Meeting - Lic&quot;, 
IF( 
ISPICKVAL(ProductType__c, &quot;Microsoft Live Meeting - Minut&quot;), &quot;Web : Microsoft Office Live Meeting - PM&quot;, 
IF( 
OR( 
ISPICKVAL(ProductType__c, &quot;WebEx - Minute&quot;), 
ISPICKVAL(ProductType__c, &quot;WebEx - Seat&quot;), 
ISPICKVAL(ProductType__c, &quot;WebEx ancillary&quot;) 
), &quot;Web : Cisco WebEx&quot;, 
IF( 
ISPICKVAL(ProductType__c, &quot;Brainshark&quot;), &quot;Web: Brainshark&quot;, 
IF( 
OR( 
ISPICKVAL(ProductType__c, &quot;Global Meet Web - Prepaid&quot;), 
ISPICKVAL(ProductType__c, &quot;GlobalMeet Web&quot;), 
ISPICKVAL(ProductType__c, &quot;GlobalMeet Web Only - Prepaid&quot;),  /* added 2/19/2015 aedd */
ISPICKVAL(ProductType__c, &quot;GlobalMeet Web Only&quot;),  /* added 2/19/2015 aedd */
ISPICKVAL(ProductType__c, &quot;GlobalMeet Web per minute&quot;),  /* added 2/19/2015 aedd */
ISPICKVAL(ProductType__c, &quot;Ready Conference Plus&quot;)
), &quot;Web : GlobalMeet - Lic&quot;, 
IF( 
ISPICKVAL(ProductType__c, &quot;Netspoke - Minute&quot;), &quot;Web : GlobalMeet - PM&quot;, 
IF(
ISPICKVAL(ProductType__c, &quot;GlobalMeet OnNet&quot;), &quot;Audio : GlobalMeet - OnNet&quot;,
IF( 
OR( 
ISPICKVAL(ProductType__c, &quot;iMeet - Prepaid&quot;), 
ISPICKVAL(ProductType__c, &quot;iMeet Web&quot;) 
), &quot;Web : iMeet - Lic&quot;, 
IF( 
OR( 
ISPICKVAL(ProductType__c, &quot;V-Cube Audio&quot;), 
ISPICKVAL(ProductType__c, &quot;V-Cube H/W Resale&quot;), 
ISPICKVAL(ProductType__c, &quot;V-Cube Resale&quot;), 
ISPICKVAL(ProductType__c, &quot;V-Cube Support&quot;)
), &quot;Vcube&quot;, 
IF( 
ISPICKVAL(ProductType__c, &quot;NO PRODUCT&quot;), &quot;NO PRODUCT&quot;,
IF( 
ISPICKVAL(ProductType__c, &quot;Ready Conference Flat Rate&quot;), &quot;Audio : GlobalMeet - Lic : Domestic&quot;,
IF( 
ISPICKVAL(ProductType__c, &quot;Microsoft Lync Audio&quot;), &quot;Audio : Microsoft Lync - Lic&quot;, &quot;No Product Mapping&quot; 
)))))))))))))))))))))</formula>
        <label>SFDC Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Value__c</fullName>
        <formula>TEXT(AsofMonthDate__c) + SFDC_Product_Family__c + Company_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <label>Usage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Revenue</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Company Revenue</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Company Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Revenue</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>